I don't like styling using rails

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,3 +3,30 @@
 @import "avatar";
 @import "form_legend_clear";
 @import "navbar";
+@import "list";
+@import "link";
+@import "form";
+
+.hero {
+  background: url('<%= asset_path("cinema-background.jpg") %>') no-repeat center center;
+  background-size: cover;
+  height: 50vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+
+  .hero-text {
+    color: white;
+    text-shadow: 0 2px 4px rgba(0, 0, 0, 0.8);
+
+    h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.5rem;
+    }
+  }
+}
