--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,7 +1,18 @@
-<h1>All Lists</h1>
-<ul>
-  <% @lists.each do |list| %>
-    <li><%= link_to list.name, list_path(list) %></li>
-  <% end %>
-</ul>
-<%= link_to "Create a New List", new_list_path, class: "btn btn-primary" %>
+<div class="hero">
+  <div class="hero-text">
+    <h1>Save any kind of movies</h1>
+    <p>Classic</p>
+  </div>
+</div>
+
+<div class="container">
+  <h2>My Lists</h2>
+  <div class="lists-grid">
+    <% @lists.each do |list| %>
+      <div class="list-card" style="background-image: url('<%= list.image_url.presence || asset_path("placeholder.jpg") %>');">
+        <h3><%= link_to list.name, list_path(list) %></h3>
+      </div>
+    <% end %>
+  </div>
+  <%= link_to "Create a movie list", new_list_path, class: "btn btn-green" %>
+</div>
